--- a/src/app/components/Chat/user-select/user-select.component.css
+++ b/src/app/components/Chat/user-select/user-select.component.css
@@ -1,7 +1,3 @@
-/* * {
-  border: 1px solid red;
-} */
-
 .main-container {
   display: flex;
   flex-direction: column;
@@ -12,7 +8,7 @@
   width: 100%;
   height: 100%; 
   padding: 20px;
-  overflow-x: visible;
+  overflow: hidden;
 }
 
 section {
@@ -20,7 +16,7 @@ section {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  margin: 20px 0;
+  margin: 5px 0;
   width: 100%;
 }
 
@@ -31,13 +27,64 @@ section {
   flex-grow: 1;
   gap: 50px;
   width: 100%;
-  height: 100px;
+  height: 130px;
+  scroll-behavior: smooth;
+}
+
+.chat-member-container {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
 }
 
 #chat-member-card {
   display: flex;
-  flex-flow: column wrap;
-  width: 100px;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  
+  border: 0.5px solid whitesmoke;
+  border-radius: 10px;
+  min-width: 130px;
+  width: fit-content;
+  height: 100px;
+  padding: 5px 10px;
+}
+
+.clear-guess-button {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  font-family: "Inter", serif;
+  font-weight: 400;
+  color: lightslategray;
+  pointer-events: auto;
+  cursor: pointer;
+  margin: 0 0 10px auto;
+  transition: ease all 0.3s;
+}
+
+.clear-guess-button:hover {
+  color: white;
+  transition: ease all 0.3s;
+}
+
+
+.selection-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  cursor: move;
+  border-radius: 10px;
+  background-color: var(--ternary-color);
+  color: whitesmoke;
+  font-size: 0.9rem;
 }
 
 #group-member-card {
@@ -82,17 +129,6 @@ section {
 }
 
   
-.user-container {
-  min-width: 45%;
-  max-width: 45%;
-  margin: 0 25px 25px 0;
-  display: flex;
-  flex-direction: row;
-  vertical-align: top;
-  background: var(--secondary-color);
-  border-radius: 5px;
-}
-
 .list-header {
   font-size: 1.2rem;
   font-family: "Open Sans", serif;
@@ -109,31 +145,23 @@ section {
   width: 100%;
 }
 
-.user-box {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  cursor: move;
-  background: rgb(177, 177, 177);
-  font-size: 14px;
-}
-
-.clear-guess-button {
-  display: flex;
-  flex-flow: row nowrap;
-  font-size: 0.8rem;
+.save-button {
+  border-radius: 20px;
+  padding: 5px 15px;
   font-family: "Inter", serif;
-  font-weight: 400;
-  color: lightslategray;
+  font-size: 0.8rem;
+
+  border: 1px solid violet;
+  background-color: rgba(128, 128, 128, 0.1);
+  color: violet;
   pointer-events: auto;
   cursor: pointer;
-  margin-left: auto;
+  transition: ease all 0.2s;
+}
+
+.save-button:hover {
+  background-color: rgba(128, 128, 128, 0.6);
+  transition: ease all 0.2s;
 }
 
 .cdk-drag-preview {
